--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,29 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.notesapp.ui.HomeFragment"
         android:label="My Note Home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/actionAddNote"
             app:destination="@id/addNoteFragment" />
+        <action
+            android:id="@+id/actionReturnLogin"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/addNoteFragment"
         android:name="com.example.notesapp.ui.AddNoteFragment"
         android:label="Add Note"
-        tools:layout="@layout/fragment_add_note" >
+        tools:layout="@layout/fragment_add_note">
         <action
             android:id="@+id/actionSaveNote"
             app:destination="@id/homeFragment" />
         <argument
-        app:argType="com.example.notesapp.db.Note"
-        android:name="Note"
-        app:nullable="true"
-        android:defaultValue="@null" />
+            android:name="Note"
+            android:defaultValue="@null"
+            app:argType="com.example.notesapp.db.Note"
+            app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.notesapp.ui.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/actionGoToLogin"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/actionQuestionFragment"
+            app:destination="@id/questionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/questionFragment"
+        android:name="com.example.notesapp.ui.QuestionFragment"
+        android:label="fragment_question"
+        tools:layout="@layout/fragment_question">
+        <action
+            android:id="@+id/actionGoToLoginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
