--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -16,29 +16,79 @@
             android:layout_height="wrap_content"
             android:text="Question1" />
 
-        <TextView
-            android:id="@+id/answer1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer1" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/answer2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Answer2" />
+            <TextView
+                android:id="@+id/answer1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Answer1" />
 
-        <TextView
-            android:id="@+id/answer3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Answer2" />
+            <CheckBox
+                android:id="@+id/isCorrect1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Correct answer?" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/answer4"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Answer4" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/answer2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Answer2" />
+
+            <CheckBox
+                android:id="@+id/isCorrect2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Correct answer?" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/answer3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Answer2" />
+
+            <CheckBox
+                android:id="@+id/isCorrect3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Correct answer?" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/answer4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Answer4" />
+
+            <CheckBox
+                android:id="@+id/isCorrect4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Correct answer?" />
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/nextButton"
