--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -43,6 +43,7 @@
                     android:id="@+id/text_view_note_correct1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:text="A" />
             </LinearLayout>
 
@@ -65,6 +66,7 @@
                     android:id="@+id/text_view_note_correct2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:text="A" />
             </LinearLayout>
 
@@ -86,6 +88,7 @@
                     android:id="@+id/text_view_note_correct3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:text="A" />
             </LinearLayout>
 
@@ -108,6 +111,7 @@
                     android:id="@+id/text_view_note_correct4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:text="A" />
             </LinearLayout>
 
