--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -51,5 +51,32 @@
         <action
             android:id="@+id/actionGoToLoginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/actionQuestionFragmentSelf"
+            app:destination="@id/questionFragment" />
+        <argument
+            android:name="index"
+            app:argType="integer" />
+        <argument
+            android:name="score"
+            app:argType="integer" />
+        <action
+            android:id="@+id/actionFromQuestionToTryAgain"
+            app:destination="@id/tryAgain" />
+    </fragment>
+    <fragment
+        android:id="@+id/tryAgain"
+        android:name="com.example.notesapp.ui.TryAgain"
+        android:label="fragment_try_again"
+        tools:layout="@layout/fragment_try_again" >
+        <argument
+            android:name="score"
+            app:argType="integer" />
+        <action
+            android:id="@+id/actionFromTryAgainToLoginFragment"
+            app:destination="@id/loginFragment" />
+        <argument
+            android:name="index"
+            app:argType="integer" />
     </fragment>
 </navigation>
